[package]
name = "collector"
version = "0.2.0"
authors = ["Joey Ezechiëls <joey.ezechiels@gmail.com>"]
description = "This utility collects and stores performance data for Spoofax Mode."
license = "GPL-3.0"

[dependencies]
bson = "0.3"
env_logger = "0.3"
getopts = "0.2.14"
json = "0.11.0"
libc = "0.2.17"
log = "0.3"
mongodb = "0.1.6"
time = "0.1"
url = "1.2.0"
zmqdl = { git = "https://github.com/jjpe/zmqdl.git" }
