[package]
name = "spoofax_collector"
version = "0.3.0"
authors = ["Joey Ezechiëls <joey.ezechiels@gmail.com>"]
description = "Collect and save events from various Amplify processes."
license = "GPL-3.0"

[dependencies]
bson = "0.7"
env_logger = "0.4"
clap = "2.24"
json = "0.11"
libc = "0.2"
log = "0.3"
mongodb = "0.2"
time = "0.1"
url = "1.4"
cereal = { git = "https://github.com/jjpe/libcereal.git" }
